tests/paczka1/fuzzy1/98220929.err
Error in line 2: lgEAnL0NLuH A377 90,7
Error in line 22: RDWTGZ9maWd A388 12,7
Error in line 7: sb7Uq S301 98,1
Error in line 32: lgEAnL0NLuH S301 90,9
